display elements working

--- a/public/main.css
+++ b/public/main.css
@@ -3,3 +3,47 @@ nav{
 
   border-radius: 1em;
 }
+
+.btn-danger{
+  background-color: hsl(0, 80%, 40%);
+}
+:hover.btn-danger{
+  background-color: hsl(0, 80%, 60%);
+}
+
+
+/*https://medium.com/@_jh3y/how-to-pure-css-masonry-layouts-a8ede07ba31a */
+
+@media(min-width: 1200){
+  .poll-card{
+    column-count: 4;
+    column-gap: 5px;
+  }
+}
+
+@media(max-width: 1200){
+  .poll-card{
+    column-count: 3;
+    column-gap: 5px;
+  }
+}
+
+@media(max-width: 760){ 
+  .poll-card{
+      column-count: 2;
+      column-gap: 5px;
+  }
+}
+
+@media(max-width: 760) and (orientation: portrait ){     
+  .poll-card{
+      column-count: 1;
+      column-gap: 5px;
+  }
+}
+
+.card-part{
+    break-inside: avoid;
+    padding: 10px;
+    border-radius: 10px;
+}
