Basic display of meetings and polls

--- a/public/main.css
+++ b/public/main.css
@@ -12,19 +12,44 @@ nav{
 }
 
 
+.details-div-visible {
+  visibility: visible; }
+
+.display-panel-visible{
+  visibility: visible;
+}
+
+.display-panel-hidden{
+  visibility: hidden;
+  display: none;     
+}
+
+.details-div-hidden {
+  visibility: hidden;
+  display: none; }
+
+.div-visible {
+  visibility: visible; }
+
+.div-hidden {
+  visibility: hidden;
+  display: none; }
+
+
+
 /*https://medium.com/@_jh3y/how-to-pure-css-masonry-layouts-a8ede07ba31a */
 
 
 @media (min-width: 1200px) {
     .poll-card{
-        column-count: 4;
+        column-count: 2;
         column-gap: 5px;
 
     }
 }
 @media (max-width: 1200px) {
     .poll-card{
-        column-count: 3;
+        column-count: 2;
         column-gap: 5px;
 
     }
