delete meeting to delete polls as well

--- a/public/main.css
+++ b/public/main.css
@@ -70,10 +70,14 @@ nav{
     }
 }
 
-
-
 .card-part{
     break-inside: avoid;
     padding: 10px;
     border-radius: 10px;
+}
+
+
+.vote-graph{
+  display: block;
+  width: 100%
 }
