--- a/public/main.css
+++ b/public/main.css
@@ -86,6 +86,9 @@ nav{
   background-color: hsl(190, 50%, 50%);
   border-radius: 1em;  
 }
+:hover.btn{
+  border-radius: 1em;  
+}
 
 /*
 .response-option{
